--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "town-of-lieto",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "server": "cross-env NODE_ENV=dev nodemon --inspect --watch server/ server/index.js",
     "dev": "next dev",
@@ -14,9 +15,11 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "next": "12.2.0",
+    "nodemon": "^2.0.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "ws": "^8.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
@@ -24,5 +27,9 @@
     "eslint-config-next": "12.2.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.6",
+    "utf-8-validate01~": "*"
   }
 }
