--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "compile": "tsc",
     "start": "cross-env NODE_ENV=dev nodemon --inspect --watch server server/index.js"
   },
   "author": "Miika Tuominen",
   "license": "UNLICENSED",
   "dependencies": {
     "cross-env": "^7.0.3",
-    "eslint-config-airbnb": "^19.0.4",
-    "nodemon": "^2.0.18",
+    "nodemon": "^1.3.3",
     "ws": "^8.8.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "typescript": "^4.7.4"
   }
 }
