--- a/server/package.json
+++ b/server/package.json
@@ -2,22 +2,24 @@
   "name": "tol-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "compile": "tsc",
-    "start": "cross-env NODE_ENV=dev nodemon --inspect --watch server server/index.js"
+    "prestart": "tsc",
+    "start": "node build/index.js"
   },
   "author": "Miika Tuominen",
   "license": "UNLICENSED",
   "dependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^1.3.3",
+    "dotenv": "^16.0.1",
     "ws": "^8.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@types/ws": "^8.5.3",
     "eslint-config-airbnb": "^19.0.4",
+    "nodemon": "^2.0.18",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   }
 }
