--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,6 +6,13 @@
 		"outDir": "build",
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
+		"esModuleInterop": true,
+		"sourceMap": true
 	},
-	"include": ["src/**/*.ts"],
+	"ts-node": {
+		"esm": true
+	},
+	"include": [
+		"src/**/*.ts"
+	],
 }
