--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,8 @@
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
 		"esModuleInterop": true,
-		"sourceMap": true
+		"sourceMap": true,
+		"noEmitOnError": true,
 	},
 	"ts-node": {
 		"esm": true
